orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <description>Agent commissions and payouts - BlackRoad Agency CRM</description>
    <label>Commission</label>
    <nameField>
        <label>Commission ID</label>
        <type>AutoNumber</type>
        <displayFormat>COM-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>