orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Commission__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New Policy</fullName><default>false</default><label>New Policy</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
            <value><fullName>Real Estate Sale</fullName><default>false</default><label>Real Estate Sale</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Bonus</fullName><default>false</default><label>Bonus</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>