orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Commission__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>